update to match HTAN repo

--- a/HIV-data-pipeline/requirements.txt
+++ b/HIV-data-pipeline/requirements.txt
@@ -5,8 +5,10 @@ rdflib
 tabletext
 graphviz
 jsonschema
+fastjsonschema
 orderedset
 google-api-python-client 
 google-auth-httplib2 
 google-auth-oauthlib
+pygsheets
 inflection
